--- a/public/index.html
+++ b/public/index.html
@@ -2,26 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Weather application" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Weather with React</title>
+
+    <title>React Weather App</title>
   </head>
   <body>
-    <div class="container">
-      <div id="weather" class="weather-container"></div>
-      <small
-        ><a
-          href="https://github.com/arrhythmia-dasha001/react-weather-arrhythmia."
-          target="_blank"
-          >Open-source code</a
-        >, Daria Arrhythmia from
-        <a href="https://shecodes.io/">She Codes</a></small
-      >
-    </div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html>
